--- a/backend/package.json
+++ b/backend/package.json
@@ -1,14 +1,14 @@
 {
-  "name": "backend-app",
+  "name": "backend",
   "version": "1.0.0",
-  "description": "Backend with Bun and PostgreSQL",
+  "description": "Backend for managing research references",
   "main": "server.js",
   "scripts": {
-    "start": "bun server.js"
+    "start": "node server.js"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.18.2",
-    "pg": "^8.11.1"
+    "pg": "^8.11.3"
   }
 }
-
